# 3-python-package-exercise-speed

./: .gitignore  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
images/: attributions.txt
src/pydancer/: __main__.py  arrows.py  component.py  constants.py  dancer.py  display.py  game.py  howto.py  image_functions.py  images.py  options.py  songs.py
static/images/: attributions.txt
static/song_data/: animals.txt
tests/: test_dancer.py  test_display.py  test_howto.py  test_images.py  test_songs.py
