[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydancer"
description = "Python game version of the dance arcade game, using arrow keys to match the steps of the dance."
version = "0.0.3"
authors = [
    { name="Glenda Boeker", email="gbb5479@nyu.edu" },
    { name="Ahmet Ilten", email="ai2068@nyu.edu" },
    { name="Shriya Kalakata", email="sk8812@nyu.edu" },
    { name="Amber Li", email="al6862@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "games"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Repository" = "https://github.com/software-students-spring2024/3-python-package-exercise-speed"

[project.scripts]
pydancer = "pydancer.__main__:main"